force-app/main/default/objects/Youtube_Channel__c/Youtube_Channel__c.object-meta.xml
<CustomObject>
    <label>Youtube Channel</label>
    <nameField>
        <label>Youtube Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Youtube Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>