force-app/main/default/objects/Youtube_Channel__c/fields/Batch_Videos__c.field-meta.xml
<CustomField>
    <fullName>Batch_Videos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Batch Videos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>