force-app/main/default/objects/Youtube_Channel__c/fields/Channel_Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Channel_Thumbnail__c</fullName>
    <label>Channel Thumbnail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>