force-app/main/default/objects/Youtube_Channel__c/fields/Channel_Thumbnail_Image__c.field-meta.xml
<CustomField>
    <fullName>Channel_Thumbnail_Image__c</fullName>
    <formula>IMAGE(Channel_Thumbnail__c,  Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Thumbnail Image</label>
    <type>Text</type>
</CustomField>