force-app/main/default/objects/Youtube_Channel__c/fields/Channel_URL__c.field-meta.xml
<CustomField>
    <fullName>Channel_URL__c</fullName>
    <formula>&apos;https://www.youtube.com/@&apos; + Handle_Encoded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel URL</label>
    <type>Text</type>
</CustomField>