force-app/main/default/objects/Youtube_Channel__c/fields/Comments_Pool__c.field-meta.xml
<CustomField>
    <fullName>Comments_Pool__c</fullName>
    <label>Comments Pool</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>