force-app/main/default/objects/Youtube_Channel__c/fields/Daily_Batch__c.field-meta.xml
<CustomField>
    <fullName>Daily_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Batch</label>
    <type>Checkbox</type>
</CustomField>