force-app/main/default/objects/Youtube_Channel__c/fields/Google_OAuth_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_OAuth_URL__c</fullName>
    <formula>$CustomMetadata.Google_Setting__mdt.Redirect_URI.Value__c + &apos;?redirect=1&amp;channelId=&apos; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google OAuth URL</label>
    <type>Text</type>
</CustomField>