force-app/main/default/objects/Youtube_Channel__c/fields/Handle__c.field-meta.xml
<CustomField>
    <fullName>Handle__c</fullName>
    <label>Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>