force-app/main/default/objects/Youtube_Channel__c/fields/Handle_Encoded__c.field-meta.xml
<CustomField>
    <fullName>Handle_Encoded__c</fullName>
    <label>Handle Encoded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>