force-app/main/default/objects/Youtube_Channel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel_ID__c</columns>
    <columns>Handle__c</columns>
    <columns>Channel_Thumbnail_Image__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>